<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itPatrimonio"
        android:icon="@drawable/ic_items_01"
        android:title="@string/patrimonio"
        app:showAsAction="always" />

    <item
        android:id="@+id/itEmpresa"
        android:icon="@drawable/ic_empresa_01"
        android:title="@string/empresa"
        app:showAsAction="always" />

    <item
        android:id="@+id/itEndereco"
        android:icon="@drawable/ic_address_01"
        android:title="@string/endereco"
        app:showAsAction="always" />

    <item
        android:id="@+id/itObjeto"
        android:icon="@drawable/ic_gallery_01"
        android:title="@string/objeto"
        app:showAsAction="always" />

</menu>