<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itFiltro"
        android:background="#ff00"
        android:orderInCategory="1"
        android:title="@string/filtro"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/itLimite"
        android:orderInCategory="2"
        android:title="@string/limite"
        app:actionViewClass="android.widget.NumberPicker"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/itPesquisa"
        android:orderInCategory="3"
        android:title="@string/pesquisa"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

</menu>